# OUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binding.gyp
data/: description.oui  home.oui  page.osal  page.oui
data/fonts/: notoserif license.txt
data/src/: description.oui  home.oui
fonts/: segoe.txt
scripts/: common.py  file_util.py  linux_build.py  setup.py  win_build.py  win_setup.py  win_test.py
source/: main.cpp
tests/: CMakeLists.txt  TestUtil.h  main.cpp
tests/oui/: test.cpp
